// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AreaPropertyOverview renders correctly for empty search 1`] = `
<AreaPropertyOverview
  searchTerm=""
>
  <div>
    You need to search for a postcode!
  </div>
</AreaPropertyOverview>
`;

exports[`AreaPropertyOverview renders correctly for search "bn10" 1`] = `
<AreaPropertyOverview
  searchTerm="bn10"
>
  <div>
    Loading...
  </div>
</AreaPropertyOverview>
`;

exports[`AreaPropertyOverview search receiving empty data renders correctly 1`] = `
<AreaPropertyOverview
  searchTerm="bn10"
>
  <div>
    No search results found
  </div>
</AreaPropertyOverview>
`;

exports[`AreaPropertyOverview search receiving null as data renders correctly 1`] = `
<AreaPropertyOverview
  searchTerm="bn10"
>
  <div>
    No search results found
  </div>
</AreaPropertyOverview>
`;

exports[`AreaPropertyOverview search updates data correctly updates correctly 1`] = `
<AreaPropertyOverview
  searchTerm="bn11"
>
  <div>
    Please enter a valid postcode! We could not find results for 
    bn11
  </div>
</AreaPropertyOverview>
`;

exports[`AreaPropertyOverview search with failed api call renders correctly 1`] = `
<AreaPropertyOverview
  searchTerm="peacehaven"
>
  <div>
    Please enter a valid postcode! We could not find results for 
    peacehaven
  </div>
</AreaPropertyOverview>
`;
